# shader-gen

./: CMakeLists.txt  README.md  azure-pipelines.yml  error_macros.hpp  example.json  main.cpp  main.hpp
.github/: ubuntu-gcc.yml  ubuntu_gcc.yml  windows-gcc.yml  windows_gcc.yml
.github/workflows/: ubuntu_gcc.yml  windows.yml  windows_build_release.yml  windows_gcc.yml  windows_gcc_build_release.yml
CI/: build_protobuf.ps1  build_protobuf.sh  build_protobuf_ubuntu.sh  build_protobuf_win64.ps1  build_protobuf_win64_gcc.sh  build_shared_absl.sh  build_shared_protobuf.sh  build_static_protobuf.sh  download_patched_windeployqt.ps1  download_patched_windeployqt.sh
ai-agent/: README.md  parameters.cpp  parameters.hpp
assets/: proto-settings.json  settings.json
generator/: visual_shader.cpp  visual_shader.hpp  visual_shader_generator.cpp  visual_shader_generator.hpp  visual_shader_node_generators.cpp  visual_shader_node_generators.hpp  visual_shader_nodes.cpp  visual_shader_nodes.hpp  vs_node_noise_generators.cpp  vs_node_noise_generators.hpp  vs_noise_nodes.cpp  vs_noise_nodes.hpp
generator/utils/: utils.hpp
gui/: visual_shader_editor.cpp  visual_shader_editor.hpp
gui/controller/: fitness_calculator.cpp  fitness_calculator.hpp  graph_node.hpp  visual_shader_editor.cpp  visual_shader_editor.hpp  vs_proto_node.hpp
gui/controller/renderer/: renderer.cpp  renderer.hpp
gui/controller/utils/: utils.hpp
gui/model/: README.md  message_model.cpp  message_model.hpp  model_mapper.cpp  oneof_model.cpp  oneof_model.hpp  primitive_model.cpp  primitive_model.hpp  proto_model.cpp  proto_model.hpp  repeated_message_model.cpp  repeated_message_model.hpp  repeated_primitive_model.cpp  repeated_primitive_model.hpp
gui/model/proto_schema/: VisualShader.proto  VisualShaderNodes.proto
gui/model/schema/: visual_shader.proto  visual_shader_nodes.proto
gui/model/utils/: field_path.cpp  field_path.hpp  utils.hpp
tests/generator/: test_vs_generator.cpp  test_vs_node_generators.cpp
tests/gui/model/: test_message_model.cpp  test_model.cpp  test_proto_model.cpp
tests/gui/model/schema/: test_schema.proto
tests/gui/model/utils/: test_field_path.cpp
